fix: admin picture
